# assert-thing

./: README.md  assertlang.cabal  stack.yaml
app/: Main.hs
src/Assert/: Lang.hs  SMT.hs
src/Assert/Lang/: Parse.hs
testfiles/: addition-bad.assert  bound-bad.assert  bound-good.assert  bound-multifun-bad.assert  bound-multifun-good.assert  comparison-bad.assert  hof-bad.assert  hof-good.assert  identity-bad.assert  identity-good.assert  inverse-bad.assert  inverse-good.assert  monotone-bad.assert  monotone-good.assert  noassert.assert  recursive-bad.assert  recursive-broken.assert  recursive-good.assert  reordering-good.assert  sum.assert
