name:                assertlang
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/assertlang#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Assert.Lang
                     , Assert.Lang.Parse
                     , Assert.SMT
  build-depends:       base >= 4.7 && < 5
                     , simple-smt
                     , recursion-schemes
                     , unordered-containers
                     , hashable
                     , trifecta
                     , parsers
                     , ansi-wl-pprint
                     , text
                     , vector
  default-language:    Haskell2010

executable assertlang-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , assertlang
                     , trifecta
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/assertlang
